refactoring cqrs